[gd_scene load_steps=3 format=2]

[ext_resource path="res://LobbySearch.gd" type="Script" id=1]
[ext_resource path="res://serverbg.png" type="Texture" id=2]

[node name="CanvasLayer" type="CanvasLayer" index="0"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="." index="0"]

position = Vector2( 511.126, 297.501 )
scale = Vector2( 0.65218, 0.647469 )
texture = ExtResource( 2 )

[node name="Vaporwave_Player" type="AudioStreamPlayer" parent="." index="1"]

stream = null
volume_db = 0.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="Button" type="Button" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 58.0
margin_top = 167.0
margin_right = 114.0
margin_bottom = 187.0
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Search"
flat = false
align = 1

[node name="HTTPRequest" type="HTTPRequest" parent="." index="3"]

download_file = ""
use_threads = false
body_size_limit = -1
max_redirects = 8

[node name="Input_Create_LobbyName" type="LineEdit" parent="." index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 51.0
margin_top = 318.0
margin_right = 351.0
margin_bottom = 342.0
rect_min_size = Vector2( 300, 0 )
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 1
size_flags_horizontal = 1
size_flags_vertical = 1
focus_mode = 2
context_menu_enabled = true
placeholder_alpha = 0.6
caret_blink = false
caret_blink_speed = 0.65
caret_position = 0
_sections_unfolded = [ "Rect" ]

[node name="Input_Create_LobbyPassword" type="LineEdit" parent="." index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 50.0
margin_top = 431.0
margin_right = 350.0
margin_bottom = 455.0
rect_min_size = Vector2( 300, 0 )
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 1
size_flags_horizontal = 1
size_flags_vertical = 1
secret = true
focus_mode = 2
context_menu_enabled = true
placeholder_alpha = 0.6
caret_blink = false
caret_blink_speed = 0.65
caret_position = 0
_sections_unfolded = [ "Rect" ]

[node name="Button2" type="Button" parent="." index="6"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 51.0
margin_top = 464.0
margin_right = 146.0
margin_bottom = 484.0
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Create Lobby"
flat = false
align = 1
_sections_unfolded = [ "Rect" ]

[node name="Input_LobbyName" type="LineEdit" parent="." index="7"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 51.0
margin_top = 131.0
margin_right = 410.0
margin_bottom = 155.0
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 1
size_flags_horizontal = 1
size_flags_vertical = 1
focus_mode = 2
context_menu_enabled = true
placeholder_alpha = 0.6
caret_blink = false
caret_blink_speed = 0.65
caret_position = 0
_sections_unfolded = [ "Visibility", "custom_colors" ]

[node name="ServerListWrapper" type="ScrollContainer" parent="." index="8"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 536.0
margin_top = 100.0
margin_right = 974.0
margin_bottom = 568.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
scroll_horizontal_enabled = true
scroll_horizontal = 0
scroll_vertical_enabled = true
scroll_vertical = 0
_sections_unfolded = [ "Theme" ]

[node name="ServerList" type="VBoxContainer" parent="ServerListWrapper" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/separation = 30
alignment = 0
_sections_unfolded = [ "custom_constants" ]

[connection signal="pressed" from="Button" to="." method="_on_Search_pressed"]

[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]

[connection signal="pressed" from="Button2" to="." method="_on_LobbyCreate_pressed"]


